@@ -106,6 +106,7 @@
 #define RIG_MODEL_FT991 RIG_MAKE_MODEL(RIG_YAESU, 35)
 #define RIG_MODEL_FT891 RIG_MAKE_MODEL(RIG_YAESU, 36)
 #define RIG_MODEL_FTDX3000 RIG_MAKE_MODEL(RIG_YAESU, 37)
+#define RIG_MODEL_FT847UNI RIG_MAKE_MODEL(RIG_YAESU, 38)
 
 
 /*
