@@ -154,6 +154,12 @@ struct ft847_priv_data {
 
   unsigned char rx_status;	/* tx returned data */
   unsigned char tx_status;	/* rx returned data */
+  /* for early ft847's we keep our own memory items */
+  /* Early rigs are one-way com to the rig */
+  freq_t freqA,freqB;
+  mode_t mode;
+  pbwidth_t width;
+  ptt_t ptt;
 };
 
 
