@@ -107,6 +107,7 @@ DECLARE_INITRIG_BACKEND(yaesu)
   rig_register(&ft1200_caps);
   rig_register(&ft991_caps);
   rig_register(&ft891_caps);
+  rig_register(&ft847uni_caps);
 
   return RIG_OK;
 }
